# Agent-Builder

./: .exampleenv  .gitignore  pyproject.toml  version.py
.cache/41/: cache.db  cache.db-shm
agent_builder/: agent_orchestrator.py  agents.py  app.py  chatmanager.py  cli.py  datamodel.py  websocket_manager.py
agent_builder/.cache/41/: cache.db  cache.db-shm
agent_builder/database/: __init__.py  database_manager.py  system_prompt.py  utils.py
agent_builder/database/migrations/: env.py
agent_builder/docker/: docker-compose.yaml
agent_builder/manager/: agent_orchestrator.py  agents.py  chatmanager.py  data_analysis_tools.py  embedding_functions.py  statement_analyzer_agent.py  websites
agent_builder/routes/: __init__.py  agents_endpoint.py  knowledge_hub_endpoints.py  link_entities_endpoints.py  models_endpoint.py  session_endpoints.py  skill_endpoints.py  workflow_endpoints.py
agent_builder/tmp/chromadb/: www.hdfcbank.com_www.hdfcbank.com_4fc3c76a
agent_builder/tools/: account_statement_tools.py  analytical_functions.py  create_retriever_agent.py
agent_builder/utils/: models.py  tools.py  utils.py
agent_builder/web/: app.py
backend/: .gitignore  app.py
docker/: docker-compose.yaml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  styles.js
frontend/src/api/: apiService.js
frontend/src/components/: AgentChatBox.js  AgentDetailsModal.js  AgentList.js  AgentWindow.js  ChatBox.js  ChatFlow.js  ImageDisplay.js  KnowledgeHubList.js  (+9 more)
tmp/chromadb/: www.hdfcbank.com_www.hdfcbank.com_4fc3c76a
(+3 files in other folders)
